K8S/platforms-nodeport.yaml
# ClusterIp exposure < NodePort exposure < LoadBalancer exposure

# ClusterIp (Within services inside K8s Cluster)
# - Exposes the Service on an internal IP in the cluster.
# - This type makes the Service only reachable from within the cluster
# - Used for internal communication

# NodePort
# - Expose service through Internal network VM's also external to k8s ip/name:port
# - Each cluster node opens a port on the node itself and redirects traffic received on that port to the underlying service.
# - Used for testing public or private access or providing access for a small amount of time.

# LoadBalancer
# - Expose service through External world or whatever you defined in your LB.
# - Accessible through a dedicated load balancer, provisioned from the cloud infrastructure Kubernetes is running on
# - Used widely for External communication

apiVersion: v1
kind: Service
metadata:
  name: platforms-nodeport-service # Name of Service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80 # Port on NodePort
      targetPort: 80 # Port of Service we want to target
